<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rifaz.simak.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/krs"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mopro" />
            
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gis" />
            
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metlit" />
            
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ecom" />
            
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sisop" />
            
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ai" />
            
            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sismul" />
                        
                        
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                 >

                <Button
                    android:id="@+id/BTNsimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"
                    android:textSize="9pt" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>


