<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rifaz.simak.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pendaftaran"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        		android:hint="@string/nama"
                >
				
            </EditText>
            
            <EditText
                android:id="@+id/nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        		android:hint="@string/nim" >

            </EditText>
            
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
        		android:hint="@string/email"
                >

            </EditText>
            
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        		android:hint="@string/username"
                >

            </EditText>
            
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        		android:hint="@string/password"
                 >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                 >

                <Button
                    android:id="@+id/BTNdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"
                    android:textSize="9pt" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>