<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rifaz.simak.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/usermane1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        		android:hint="@string/username"
                >
            </EditText>
            
            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        		android:hint="@string/password" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/browse"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_marginTop="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/dot" />

                <CheckBox
                    android:id="@+id/ingat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ingat" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                 >

                <Button
                    android:id="@+id/BTNlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="9pt" />

                <Button
                    android:id="@+id/daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>


